# choreo-ir

./: .cursor-config.json  .gitignore  CMakeLists.txt  README.md
baselines/: CMakeLists.txt  test_baselines
baselines/include/: baseline_factory.hpp  baselines.hpp  cublas_baseline.hpp  cuda_baseline.hpp
baselines/src/: baseline_factory.cpp  cuda_baseline.cu
benchmark/: CMakeLists.txt
benchmark/baselines/: CMakeLists.txt  cublas_impl.cpp  cublas_impl.hpp  cudnn_impl.hpp
benchmark/comparisons/: CMakeLists.txt  matmul_comparison.cpp
benchmark/kernels/: CMakeLists.txt  gemm_example.cu  matmul_kernels.cu  wmma_kernels.cu
benchmark/performance/: CMakeLists.txt  benchmark_suite.cpp
docs/: NEW_ARCHITECTURE.md  TESTING_AND_BENCHMARKS.md
examples/: CMakeLists.txt  ideal_matmul_example.cu  simple_ideal_example.cu
include/choreo-ir/: choreo-ir.hpp  ideal_api.hpp
include/choreo-ir/compute/: compute.hpp  compute_impl.hpp  conv.hpp  cuda_core.hpp  elementwise.hpp  matmul.hpp  mma.hpp  validation.hpp  wmma.hpp
include/choreo-ir/core/: config.hpp  device.hpp  types.hpp
include/choreo-ir/detail/: ideal_api_impl.hpp
include/choreo-ir/tensor/: layout.hpp  shape.hpp  stride.hpp  tensor.hpp
include/choreo-ir/utils/: cuda_utils.hpp  debug.hpp  profiler.hpp
scripts/: README.md  build.sh  check_gpu.sh  run_end2end.sh  run_quick_demo.py  run_regression_tests.py  run_single_test.sh  test.sh  test_report.md
tests/: CMakeLists.txt  test_baselines.cpp  test_cuda_utils  test_cuda_utils.cpp  test_debug_cpu  test_debug_cpu.cpp  test_debug_simple  test_debug_simple.cpp  test_device  test_device.cpp  test_end2end  test_end2end.cpp  test_ideal_api.cpp  test_integration  test_integration.cpp  test_layout  test_layout.cpp  test_performance_comparison  test_performance_comparison.cpp  test_shape  test_shape.cpp  test_stride  test_stride.cpp  test_tensor  test_tensor.cpp  test_tensor_simple.cpp
tests/compute/: CMakeLists.txt  test_cuda_core.cu  test_mma.cu  test_wmma.cu
